# learn-langchain

./: .gitignore  pyproject.toml
slicer-agent/: ORCA_INTEGRATION.md  README.md  dsl.py  executor_contract.py  json_utils.py  plan_validation.py  planner.py  schemas.py  server.py  ui.html
slicer-agent/tests/: test_planner.py  test_server.py  test_web_ui.py
weather-reporter/: README.md  agent.py  test_agent.py
